# novel_writing_support_app

./: .gitignore  Dockerfile  README.md  app.py  pipeline.json  pyproject.toml
app/: Dockerfile  app.py  pyproject.toml  requirements.txt
app/templates/: result.html
notebook/: narow_doc2vec.ipynb
templates/: form.html  layout.html
