[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kurokuroB"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
openai = "^0.27.8"
langchain = "^0.0.216"
gensim = "^4.3.1"
notebook = "^6.5.4"
pandas = "^2.0.2"
janome = "^0.4.2"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
